<resources>
    <string name="app_name">quiz</string>
    <string name="playBtn">Start Quiz</string>
    <string name="toResultListBtn">Results</string>
    <string name="nameInputBtn">Play</string>
    <string name="continueBtn">0/10 \nContinue</string>
    <string name="goToStartBtn">Go home</string>
    <string name="playerName">What is your name?</string>
    <string name="questionCounter">0/10</string>
    <string name="playerNameInput">Vitallek...</string>
    <string name="categoryTextView">CATEGORYCATEGORYCATEGORYCATEGORYCATEGORY</string>
    <string name="difficulty">Difficulty</string>
    <string name="question">Question</string>
    <string name="timer">123456789</string>
    <string name="difficultyLevel">Level: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top100label">TOP-100 Best Players</string>
    <string name="itemID">ID</string>
    <string name="ItemName">Name</string>
    <string name="ItemScore">Score</string>

</resources>