<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultAreaFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultArea">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/congratulationsText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="24sp"
            android:text=""
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/top100textview"
            app:layout_constraintVertical_weight="6" />

        <TextView
            android:id="@+id/top100textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:text="@string/top100label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congratulationsText"
            app:layout_constraintBottom_toTopOf="@id/itemID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_weight="1"/>

        <TextView
            style="@style/playerItemStyle"
            android:id="@+id/itemID"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/itemID"
            app:layout_constraintEnd_toStartOf="@id/itemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top100textview"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"/>


        <TextView
            style="@style/playerItemStyle"
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ItemName"
            app:layout_constraintStart_toEndOf="@id/itemID"
            app:layout_constraintEnd_toStartOf="@id/itemScore"
            app:layout_constraintTop_toBottomOf="@id/top100textview"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            style="@style/playerItemStyle"
            android:id="@+id/itemScore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ItemScore"
            app:layout_constraintStart_toEndOf="@id/itemName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top100textview"
            app:layout_constraintHorizontal_weight="2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playerList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/goHomeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemID"
            app:layout_constraintVertical_weight="7" />

        <Button
            android:id="@+id/goHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/goToStartBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerList"
            app:layout_constraintVertical_weight="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>