<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nameInputFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameInputFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/whatIsYName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerName"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/playerNameInputField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <EditText
            android:id="@+id/playerNameInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playerNameInput"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/playBtn1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/whatIsYName"
            app:layout_constraintVertical_weight="1"
            android:autofillHints="" />

        <Button
            android:id="@+id/playBtn1"
            android:layout_width="157dp"
            android:layout_height="126dp"
            android:text="@string/nameInputBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerNameInputField"
            app:layout_constraintVertical_weight="2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>